Hago responsive todas las páginas de mi proyecto

--- a/extentions/whereweare.html
+++ b/extentions/whereweare.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../css/app.css">
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/style.css">
-    <title>ubicación</title>
+    <title>Ubicación</title>
 </head>
 <body>
     <header class="d-flex justify-content-center border-bottom border-warning position: sticky">
@@ -40,7 +40,7 @@
 
     <main>
       <div class="d-flex flex-column align-items-center">
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3302.0068436005818!2d-59.085254623359965!3d-34.14616703348026!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bb755447de4bef%3A0x9c709c35d2b9ace1!2sTabula%20Rasa!5e0!3m2!1ses-419!2sar!4v1684188944629!5m2!1ses-419!2sar" width="1200" height="650" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3302.0068436005818!2d-59.085254623359965!3d-34.14616703348026!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bb755447de4bef%3A0x9c709c35d2b9ace1!2sTabula%20Rasa!5e0!3m2!1ses-419!2sar!4v1684188944629!5m2!1ses-419!2sar" width="1200" height="650" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="map"></iframe>
           <h2 class="fs-4 pt-4">
             Nuestra ubicación
           </h2>
