--- a/extentions/aboutus.html
+++ b/extentions/aboutus.html
@@ -6,12 +6,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Mochiy+Pop+P+One&family=Poppins:ital@0;1&family=Ubuntu&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="stylesheet" href="../css/app.css">
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/style.css">
     <title>Sobre nosotros</title>
 </head>
-<body>
+<body class="animate__animated animate__fadeInDown">
     <header class="d-flex justify-content-center border-bottom border-warning position: sticky">
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
