Agrego meta-description y keywords a index.html

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Tabula Rasa es un grupo de emprendedores unidos por la misma pasión. Nuestro espíritu es desarrollar productos de excelencia, elaborados bajo procesos estandarizados.">
+    <meta name="keywords" content="TABULA RASA, CERVEZA, ALCOHOL, LUPULO, MALTA, TABULA RASA CERVEZA, FLORIDA, ZÁRATE, FABRICA, PATIO CERVECERO">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Mochiy+Pop+P+One&family=Poppins:ital@0;1&family=Ubuntu&display=swap" rel="stylesheet">
